# AnkandoraLight

./: .gitattributes  .gitignore  LICENSE  README.md
design/: Flow.odg  (+6 more)
src/: dedicatedServer.py  main.py  requirements.txt  setup.cfg  setup.py
src/assets/models/board/: BoardScene.bam
src/audio/: AudioManager.py
src/battle/: BattleStats.py  DBattle.py  DBattleAI.py
src/board/: BoardMap.py  DBoard.py  DBoardAI.py  Field.py
src/chat/: DMessage.py
src/config/: config.py  enemies.csv  playerClasses.csv
src/dice/: SixSidedDice.py
src/enemy/: EnemyAI.py
src/globalData/: RoomGlobals.py  ZonesGlobals.py
src/gui/: Battle.py  BattleHandler.py  BattleOver.py  BattleOverHandler.py  BattleStats.py  Chat.py  ChatHandler.py  DirectTooltip.py  GameOver.py  GameOverHandler.py  Inventory.py  InventoryHandler.py  LoadingScreen.py  LoadingScreenHandler.py  MainMenu.py  MainMenuHandler.py  MultiplayerPlayerInfo.py  Options.py  OptionsHandler.py  Quest.py  QuestHandler.py  RollDice.py  RollDiceHandler.py  RoomCreate.py  RoomEntry.py  RoomList.py  RoomListHandler.py  SinglePlayerCreateGame.py  SinglePlayerCreateGameHandler.py  TopBar.py  TopBarHandler.py  Turn.py  TurnHandler.py
src/interfaces/: chat.dc  direct.dc  gameRoom.dc
src/piece/: DPiece.py  DPieceAI.py
src/player/: ClassManager.py  DBotPlayer.py  DBotPlayerAI.py  DPlayer.py  DPlayerAI.py
src/questCard/: DQuestCard.py  DQuestCardAI.py
src/repositories/: AIRepository.py  GameClientRepository.py  GameServerRepository.py
src/room/: DRoom.py  DRoomAI.py
src/roomManager/: DRoomManager.py  DRoomManagerAI.py
(+94 files in other folders)
