[metadata]
name = Ankandora
author = Fireclaw
version = 20.08

[build_apps]
include_patterns = **/*.png
	**/*.otf
	**/*.jpg
	interfaces/*.dc
gui_apps = Ankandora=main.py
console_apps = AnkandoraServer=dedicatedServer.py
plugins = pandagl
	p3direct
	p3openal_audio
platforms = manylinux1_x86_64
	win_amd64
build_base = ../deploy/build

[bdist_apps]
dist_dir = ../deploy/dist

